--- a/css/style.css
+++ b/css/style.css
@@ -223,6 +223,7 @@ body {
 }
 .gallery__item {
   max-width: calc((1vw + 1vh) * 20);
+  width: 100%;
   margin-bottom: 24px;
   border-radius: 8px;
   max-height: 100vh;
